src/test/ui/did_you_mean/issue-36798.stderr
error: no field `baz` on type `Foo`
  --> $DIR/issue-36798.rs:17:7
   |
17 |     f.baz;
   |       ^^^ did you mean `bar`?

error: aborting due to previous error

